# vitulus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
config/: scan_filter.yaml
launch/: d435.launch  device_state_publisher.launch  main.launch  nextion_lcd.launch  open_cr.launch  pcl_voxelgrid.launch  rplidar.launch  scan_filter.launch  t265.launch  vitulus.startup  vitulus_start.launch
launch/includes/: d435HighAccuracy.json  t2654WD1N.json
nodes/: device_state_publisher  main  nextion_lcd
rviz/: vitulus.rviz
scripts/: org.freedesktop.NetworkManager.pkla  vitulus.service
src/: laserscan_nan2inf.cpp  laserscan_override.cpp
