<?xml version="1.0"?>
<package format="2">
  <name>vitulus</name>
  <version>0.0.1</version>
  <description>Vitulus main package. Start the robot.</description>

  <maintainer email="robert@lacina.dev">Robert Lacina</maintainer>
  <license>Apache 2.0</license>
  <author email="robert@lacina.dev">Robert Lacina</author>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vitulus_msgs</depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>message_generation</build_depend>
</package>
